[project]
name = "rag-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-azure-ai>=0.1.4",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-huggingface>=0.3.1",
    "python-environ>=0.4.54",
    "streamlit>=1.50.0",
]
